--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,9 +78,7 @@ section{
     
 }
 
-.horizontal{
-    display: inline;
-}
+
 .section-title{
     
     font-size: 40px;
@@ -100,10 +98,10 @@ section{
 
 .section-title h2{
     color: var(--section-font);
-    border-bottom: 3px solid var(--border-color1);
+    border-bottom: 4px solid var(--border-color1);
    /* background-image: url("../img/brick.jpg");
     background-size: auto; */
-    
+    /*margin-bottom: 10px;*/
     text-shadow: 0 0 10px rgba(0,0,0,.5);
     
 
@@ -115,20 +113,25 @@ section{
 .about-me{
     
     border-bottom:solid 3px var(--border-color1);
+    padding: 20px 0 20px 0;
 }
 
 .about-me img{
     width: 40%;
     flex-shrink: 0;
     display: inline;
+    border-radius: 15px;
+    border-width: 5px ;
+    border-color: var(--border-color1);
+    border-style: solid;
     
 }
 .aboutbox{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     vertical-align: top;
-    
+   
     
 
 }
@@ -136,12 +139,12 @@ section{
 
 .about-me p{
     display: inline;
+    width: 40% ;
     border-radius: 15px;
-    width: 50% ;
     border-width: 5px ;
     border-color: var(--border-color1);
-    background-color: var(--primary-color);
     border-style: solid;
+    background-color: var(--primary-color);
     align-items: center;
     /*margin: 0 30px 0 30px;*/
     text-align:center;
@@ -168,6 +171,8 @@ section{
     display: grid;
     grid-template-columns: repeat(6,1fr);
     row-gap: 30px;
+    column-gap: 5px;
+   
     
     /*grid-template-columns:[column1] 30px [column2] 40px [column3] auto [column4]auto [column5]40px [column6]40px ;
     grid-template-rows: [row1]50px [row2]50px [row3]50px [row4] 50px [row5]50ps;*/
@@ -182,7 +187,7 @@ section{
     border-radius: 10px;
     align-content: center;
     text-align: center;
-    color:var(--primary-font);
+    color:var(--section-font);
     
     border-width: 3px;
     
@@ -209,25 +214,32 @@ section{
 .runbuddy{
     
     background-image: url(../img/runbuddy-pic.PNG);
-    grid-column-start: 2;
-    grid-column-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 7;
     background-size: cover;
-    
 }
 
-.grid-item{
-    grid-column-start: columnmiddle;
+    
+
+.carbon {
+    background-image: url(../img/carbon\ fiber.jpg);
+    background-size: cover;
 }
-.pro2{
-grid-column-start: 2;
+
+.pro2 {
+grid-column-start: 1;
 grid-column-end: 4;
+
+
 
 }
 .pro3{
     grid-column-start: 4;
-    grid-column-end: 6;
+    grid-column-end: 7;
+    
      
 }
+
 /*
 .project:first{
     width:100%;
@@ -235,36 +247,47 @@ grid-column-end: 4;
     grid-column-end: column4;
 }
 */
-.contact-info{
-    padding: 20px 0 20px 0;
-    text-align: center;
-    flex-wrap: wrap;
-    margin:30px;
-    justify-content: space-around;
 
 
-}
-.contact-info h3{
-    font-size: 30px;
-    color: var(--primary-font)
-}
-.contact-info address{
-    font-size: 20px;
-    color: var(--primary-font)
-}
 .project-container a :hover{
 background-color:  rgba(102, 207, 207, 0.5);
 }
-
+/*
 .left-contact{
     display: inline;
 }
 .right-contact a{
     display:inline;
 }
-.linkedin img{
-    width: 50px;
+*/
+
+.contact-me{
+    display: flex;
+    flex-wrap: wrap;
+}
+.contact-info{
     
+    text-align: left;
+    
+    margin:30px;
+    
+
+
+
+}
+.contact-info h3{
+    font-size: 30px;
+    color: var(--primary-font);
+    display: inline;
+    
+}
+.contact-info address{
+    font-size: 20px;
+    color: var(--primary-font);
+   display: inline;
+}
+.linkedin img {
+    width: 50px;
 }
 
 @media screen and (max-width: 980px) {
@@ -279,5 +302,43 @@ background-color:  rgba(102, 207, 207, 0.5);
     .hero p{
         width:100%;
     }
+    
+  }
+
+  @media screen and (max-width: 768px) {
+    section{
+      padding: 30px 15px;
+    }
+    .step h3 {
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .step-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .step-img {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .step-text {
+      flex: 100%;  
+    }
+  
+    
+    
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+   .hero img{
+       width: 100%;
+   }
     
   }
