--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
   }
 
-
+/* variables for colors used*/
 :root{
     --primary-color:rgb(76, 179, 226);
     --primary-font:#585c5c;
@@ -19,6 +19,7 @@ body{
 p{
     font-size:20px;
 }
+/* header / navigation bar stylings */
 header{
 background-color:var(--primary-color);
 margin: auto;
@@ -29,7 +30,7 @@ align-items: center;
 flex-wrap: wrap;
 text-shadow: 0 0 10px rgba(0,0,0,.5);
 
-border-bottom: solid 3px var(--border-color1);
+border-bottom: solid 5px var(--border-color1);
 
 }
 
@@ -60,47 +61,26 @@ header nav ul li{
    color:var(--primary-font);
    
 }
-.hero{
-    width:100%;
-    height:auto;
-    background-size: cover;
-    margin:0;
-    background-image: url('../img/tech_backdrop2.jpg');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items:center
-}
+
+
 section{
     background-color:var(--background-mono) ;
     
 }
 
-
+/* Class for all Section Titles styles the flexbox and the sub-header*/
 .section-title{
     
     font-size: 40px;
     margin: 0;
-    /*
-    bottom: border 1px ;
-    border-right:2px var(--border-color1);*/
     display: flex;
     flex-wrap: wrap;
-
-    
     
 }
-/*
-.section-title p{
-    display: inline;
-}*/
-
 
 .section-title h2{
     color: var(--section-font);
-    border-bottom: 4px solid var(--border-color1);
+    border-bottom: 5px solid var(--border-color1);
    /* background-image: url("../img/brick.jpg");
     background-size: auto; */
     /*margin-bottom: 10px;*/
@@ -111,11 +91,11 @@ section{
     
     
 }
-
+/*Styles the about me box section*/
 .about-me{
     display: flex;
     flex-wrap: wrap;
-    border-bottom:solid 3px var(--border-color1);
+    /*border-bottom:solid 3px var(--border-color1);*/
     padding: 20px 0 20px 0;
     
 }
@@ -130,6 +110,7 @@ section{
     border-style: solid;
     
 }
+/*styles the box specifically*/
 .aboutbox{
     
     justify-content: center;
@@ -152,34 +133,18 @@ section{
     border-style: solid;
     background-color: var(--primary-color);
     align-items: center;
-    /*margin: 0 30px 0 30px;*/
     text-align:center;
-    
-    
-
-   /* padding: 30px;*/
-
     color:#e4dbda;
 }
-
-
-
-
-
-/*
-#headshot{
-    width: 30%;
-    
-    float:right;
-}*/
-
+/*Styles the projects section */
 .projects{
     display: grid;
     flex-direction: wrap;
     padding: 30px 0 30px 0;
 }
+/*projects itself is a grid container within a flex box*/
 .grid-container{
-   
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(6,1fr);
     row-gap: 30px;
@@ -192,6 +157,7 @@ section{
 
     
 }
+/*project container is an individual item (eg a project) within the grid container*/
 .project-container {
     
     border-style: solid;
@@ -202,28 +168,22 @@ section{
     text-align: center;
     color:var(--section-font);
     
-    border-width: 3px;
+    border-width: 5px;
     
 }
-
-/*
-.project-container p{
-    opacity: 0;
-}
-.project-container:first h3{
-    opacity: 0;
-}*/
+/* styles the first project differnetly*/
 .grid-container:first{
     padding: 20px;
     border-style: solid;
     border-color: var(--border-color1);
-    border: 3px;
+    border: 5px;
     border-radius: 10px;
     /*align-content: center;*/
     text-align: center;
   
     justify-content: center;
 }
+/* class for first project*/
 .runbuddy{
     
     background-image: url(../img/runbuddy-pic.PNG);
@@ -233,18 +193,18 @@ section{
 }
 
     
-
+/* background for not completed projects*/
 .carbon {
     background-image: url(../img/carbon\ fiber.jpg);
     background-size: cover;
 }
-
+/* left side project*/
 .pro2 {
 grid-column-start: 1;
 grid-column-end: 4;
 
 
-
+/*right side project*/
 }
 .pro3{
     grid-column-start: 4;
@@ -253,35 +213,16 @@ grid-column-end: 4;
      
 }
 
-/*
-.project:first{
-    width:100%;
-    grid-column-start: column2;
-    grid-column-end: column4;
-}
-*/
-
-
 .project-container a :hover{
 background-color:  rgba(102, 207, 207, 0.5);
 }
-/*
-.left-contact{
-    display: inline;
-}
-.right-contact a{
-    display:inline;
-}
-*/
-
+/* contact me head section*/
 .contact-me{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.contact-me h2{
-display: inline;
-}
+/* contact info is the sub wrapper for the contact information */
 .contact-info{
     
     text-align: right;
@@ -303,15 +244,13 @@ display: inline;
   
 
 }
-.contact-info img{
-    margin: 0 0 0 50px;
-}
+
 .linkedin img {
     width: 50px;
     
 }
 
-
+/* this sizes for smaller screens*/
 @media screen and (max-width: 980px) {
 header{
     position: relative;
@@ -365,6 +304,8 @@ header nav ul li{
         margin-top: 20px;
     }
 }
+
+/*This sizes for even smaller screens.*/
 @media screen and (max-width: 768px) {
     .contact-me h3{
         display: block;
@@ -375,3 +316,7 @@ header nav ul li{
         width: 100%;
     }
 }
+@media screen and (max-width: 575px) {
+    .project-container h3{
+        font-size: 25px;
+    }}
